Sat Jun 18 04:21:58 2005  Manish Singh  <yosh@gimp.org>

	* gtk/gtktreeview.c (do_presize_handler): remove unused variable
	height_old.

2005-06-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrenderertoggle.c:
	* gtk/gtktextview.c:
	* gtk/gtktreeview.c: Typo fixes in comments.

	* gtk/gtkpaned.c (gtk_paned_add): Barf if more than
	2 children are added.  (#308111, Morten Welinder)

	* gtk/gtkcalendar.c (gtk_calendar_init): _NL_FIRST_WEEKDAY is
	1-based.  (#163842, Pierre Ossman)

2005-06-17  Kristian Rietveld  <kris@gtk.org>

	Fix #160281, testcase from Peter Bloomfield.

	* gtk/gtktreeview.c (do_presize_handler): always size request
	and update adjustments in fixed height mode,
	(gtk_tree_view_build_tree): if a fixed height is set, set this
	height on newly added nodes.

2005-06-17  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkdnd-win32.c (gdk_dropfiles_filter): Set the actions
	and suggested_action fields in the GdkDragContext to
	GDK_ACTION_COPY. Otherwise apps that check the suggested_action
	field, like eog, won't accept dropped files.

2005-06-17  Matthias Clasen  <mclasen@redhat.com>

	Support the ICCCM urgency hint.  (#61858, Havoc Pennington)
	
	* gtk/gtk.symbols: 
	* gtk/gtkwindow.[hc]: Add a GtkWindow::urgency-hint property
	with getter and setter.

	* gdk/gdk.symbols: 
	* gdk/gdkwindow.h: 
	* gdk/x11/gdkwindow-x11.c (gdk_window_set_urgency_hint): 
	Add a setter for the urgency hint.

	* gdk/x11/gdkwindow-x11.h (struct _GdkToplevelX11): Store
	urgency hint here.

	* gdk/x11/gdkwindow-x11.c (update_wm_hints): Set the urgency
	hint in the WM_HINTS property when appropriate.

2005-06-17  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkcursor.h: Define GDK_IS_CURSOR() and GDK_CURSOR().

	* gdk/x11/gdkcursor-x11.c: 
	* gdk/gdkcursor.c: Improve some return_if_fail checks,
	and add the missing non-Xcursor fallback for 
	_gdk_x11_cursor_update_theme(), noticed by Jeroen 
	Zwartepoorte.

	* gtk/gtkbutton.c (gtk_button_class_init): Document